--- a/Clean_data.ipynb
+++ b/Clean_data.ipynb
@@ -848,6 +848,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3aa53903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Winsorizar antes de exportar\n",
+    "lower_cut = df_acoes_t1.iloc[:,2:].quantile(0.025)\n",
+    "upper_cut = df_acoes_t1.iloc[:,2:].quantile(0.975)\n",
+    "\n",
+    "## Aplica a winsorização aos dados\n",
+    "df_acoes_t1.iloc[:,2:] = df_acoes_t1.iloc[:,2:].clip(lower_cut, upper_cut, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "id": "0c7d58d2",
    "metadata": {
@@ -1696,6 +1711,21 @@
     "\n",
     "\n",
     "df_bdrs_t1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6e4a886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Winsorizar antes de exportar\n",
+    "lower_cut = df_bdrs_t1.iloc[:,2:].quantile(0.025)\n",
+    "upper_cut = df_bdrs_t1.iloc[:,2:].quantile(0.975)\n",
+    "\n",
+    "## Aplica a winsorização aos dados\n",
+    "df_bdrs_t1.iloc[:,2:] = df_bdrs_t1.iloc[:,2:].clip(lower_cut, upper_cut, axis=1)"
    ]
   },
   {
@@ -3546,6 +3576,21 @@
     "df_fii_t1[df_fii_t1.columns[2:]] = df_fii_t1[df_fii_t1.columns[2:]].astype('float')\n",
     "df_fii_t1['Valor patrimonial cota - (R$)'] = df_fii_t1['Valor patrimonial cota - (R$)']/100\n",
     "df_fii_t1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfe99a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Winsorizar antes de exportar\n",
+    "lower_cut = df_fii_t1.iloc[:,2:].quantile(0.025)\n",
+    "upper_cut = df_fii_t1.iloc[:,2:].quantile(0.975)\n",
+    "\n",
+    "## Aplica a winsorização aos dados\n",
+    "df_fii_t1.iloc[:,2:] = df_fii_t1.iloc[:,2:].clip(lower_cut, upper_cut, axis=1)"
    ]
   },
   {
