Add algoritmos de entropy e topsis

--- a/Melhores_papeis_topsis.ipynb
+++ b/Melhores_papeis_topsis.ipynb
@@ -250,26 +250,32 @@
     "w_fiis = pd.read_csv(\"FII_weights.csv\")\n",
     "df_fiis = pd.read_csv(\"FII_b3_stinvest_tratado.csv\")\n",
     "\n",
-    "pos_cols = ['dy%', 'vpa', \n",
-    "            'lpa', 'patrimonio_ativo', \n",
-    "            'liquidezcorrente', 'margembruta%', \n",
-    "            'margemebitda%', 'margemebit%', \n",
-    "            'margemliquida%', 'roe%', \n",
-    "            'roa%', 'roic%', \n",
-    "            'giro_ativos','receitas_cagr5%', \n",
-    "            'lucros_cagr5%']\n",
+    "# Algumas colunas não puxam info do statusinvest\n",
+    "# Seleciono todas as colunas que tem alguma info e tem efeito positivo ou negativo no FII\n",
+    "pos_cols = ['numero cotistas', 'numero cotas emitidas', 'Ativos - (R$)',\n",
+    "            'patrimonio liquido - (R$)', 'Valor patrimonial cota - (R$)',\n",
+    "            'Disponibilidades - (R$)', 'titulos publicos - (R$)', 'Titulos privados - (R$)',\n",
+    "            'Total investido - (R$)', 'Bens e direitos imoveis - (R$)', 'Terrenos - (R$)',\n",
+    "            'Imoveis renda acabados - (R$)', 'Imoveis renda construcao - (R$)',\n",
+    "            'Imoveis venda acabados - (R$)', 'Outros bens e direitos - (R$)',\n",
+    "            'acoes - (R$)', 'Fundo de Investimento Imobiliario (FII) - (R$)',\n",
+    "            'Acoes de Sociedades cujo unico proposito se enquadra entre as atividades permitidas aos FII - (R$)',\n",
+    "            'Cotas de Sociedades que se enquadre entre as atividades permitidas aos FII - (R$)',\n",
+    "            'CRI - (R$)', 'LCI - (R$)', \n",
+    "            'Valores a Receber - (R$)', 'Contas a Receber por alugueis - (R$)', \n",
+    "            'Contas a Receber por Venda de Imoveis - (R$)', 'Outros Valores a Receber - (R$)',\n",
+    "            'Rendimentos a distribuir - (R$)']\n",
     "\n",
-    "neg_cols = ['p_l', 'peg_Ratio', \n",
-    "            'p_vp', 'ev_ebitda',\n",
-    "            'ev_ebit', 'p_ebita', \n",
-    "            'p_ebit', 'p_ativo', \n",
-    "            'p_sr','p_capitlgiro', \n",
-    "            'p_ativocirculante', 'dividaliquida_patrimonioliquido',\n",
-    "            'dividaliquida_ebitda', 'dividaliquida_ebit',\n",
-    "            'passivo_ativo']\n",
+    "neg_cols = ['Total necessidade liquidez - (R$)', 'Valores a pagar - (R$)',\n",
+    "            'Taxa de administracao a pagar - (R$)', 'Taxa de performance a pagar - (R$)',\n",
+    "            'obrigacoes por aquisicoes de imoveis - (R$)', 'Obrigacoes por securitizacoes de imoveis - (R$)',\n",
+    "            'Provisoes e contigencias - (R$)', 'Outros valores a pagar - (R$)']\n",
     "\n",
-    "best_fiis = topsis(df_fiis, pos_cols, neg_cols, w_fiis)\n",
-    "best_fiis.to_csv('melhores_acoes_topsis.csv', index=False)"
+    "df_fiis_selecionados = df_fiis.loc[:, ['Anos'] + ['Ticket'] + pos_cols + neg_cols]\n",
+    "df_fiis_selecionados.rename(columns={'Ticket': 'ticket'}, inplace = True)\n",
+    "\n",
+    "best_fiis = topsis(df_fiis_selecionados, pos_cols, neg_cols, w_fiis)\n",
+    "best_fiis.to_csv('melhores_FIIs_topsis.csv', index=False)"
    ]
   }
  ],
@@ -300,7 +306,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "273.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
