--- a/Pesos_informacoes.ipynb
+++ b/Pesos_informacoes.ipynb
@@ -171,7 +171,27 @@
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "df_fiis = pd.read_csv(\"FII_b3_stinvest_tratado.csv\")\n",
-    "df_fiis.head()"
+    "# seleciona só as colunas importantes para os fiis\n",
+    "cols = ['Anos', 'Ticket',\n",
+    "       'numero cotistas', 'numero cotas emitidas', 'Ativos - (R$)',\n",
+    "       'patrimonio liquido - (R$)', 'Valor patrimonial cota - (R$)',\n",
+    "       'Disponibilidades - (R$)', 'titulos publicos - (R$)', 'Titulos privados - (R$)',\n",
+    "       'Total investido - (R$)', 'Bens e direitos imoveis - (R$)', 'Terrenos - (R$)',\n",
+    "       'Imoveis renda acabados - (R$)', 'Imoveis renda construcao - (R$)',\n",
+    "       'Imoveis venda acabados - (R$)', 'Outros bens e direitos - (R$)',\n",
+    "       'acoes - (R$)', 'Fundo de Investimento Imobiliario (FII) - (R$)',\n",
+    "       'Acoes de Sociedades cujo unico proposito se enquadra entre as atividades permitidas aos FII - (R$)',\n",
+    "       'Cotas de Sociedades que se enquadre entre as atividades permitidas aos FII - (R$)',\n",
+    "       'CRI - (R$)', 'LCI - (R$)', \n",
+    "       'Valores a Receber - (R$)', 'Contas a Receber por alugueis - (R$)', \n",
+    "       'Contas a Receber por Venda de Imoveis - (R$)', 'Outros Valores a Receber - (R$)',\n",
+    "       'Rendimentos a distribuir - (R$)',\n",
+    "       'Total necessidade liquidez - (R$)', 'Valores a pagar - (R$)',\n",
+    "       'Taxa de administracao a pagar - (R$)', 'Taxa de performance a pagar - (R$)',\n",
+    "       'obrigacoes por aquisicoes de imoveis - (R$)', 'Obrigacoes por securitizacoes de imoveis - (R$)',\n",
+    "       'Provisoes e contigencias - (R$)', 'Outros valores a pagar - (R$)']\n",
+    "\n",
+    "df_fiis = df_fiis.loc[:, cols]"
    ]
   },
   {
@@ -181,16 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calcula_pesos = calculate_weights(df_fiis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30eaf985",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "calcula_pesos = calculate_weights(df_fiis)\n",
     "calcula_pesos.to_csv('FII_weights.csv', index=False)"
    ]
   }
